# libhugetlbfs

./: config.guess  config.sub  configure.ac  hugeutils.c  install-sh
.github/workflows/: checkpatch.yml  makefile.yml
tests/: empty_mounts.c  meminfo_nohuge.c  run_tests.py
